Fix pin buttons submitting the whole form

--- a/app/views/modal.pin.html
+++ b/app/views/modal.pin.html
@@ -14,49 +14,50 @@
 
           <div class="form-group">
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '7'">&nbsp;</button>
             </span>
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '8'">&nbsp;</button>
             </span>
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '9'">&nbsp;</button>
             </span>
           </div>
           <div class="form-group">
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '4'">&nbsp;</button>
             </span>
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '5'">&nbsp;</button>
             </span>
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '6'">&nbsp;</button>
             </span>
           </div>
           <div class="form-group">
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '1'">&nbsp;</button>
             </span>
 
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '2'">&nbsp;</button>
             </span>
             <span class="col-sm-4">
-              <button class="btn btn-block btn-lg"
+              <button type="button" class="btn btn-block btn-lg"
                       ng-click="pin = pin + '3'">&nbsp;</button>
             </span>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control h4 input-lg text-center pinmodal-pin" autocomplete="off"
+            <input type="password" class="form-control h4 input-lg text-center pinmodal-pin"
+                   autocomplete="off"
                    ng-model="pin">
           </div>
 
