--- a/app/views/recovery.html
+++ b/app/views/recovery.html
@@ -37,7 +37,7 @@
 
     <h5 ng-show="seedWords.length">Recovered seed words:</h5>
     <ul>
-      <li ng-repeat="word in seedWords">{{word}}</li>
+      <li ng-repeat="word in seedWords track by $index">{{word}}</li>
     </ul>
   </fieldset>
 
