--- a/app/views/account.html
+++ b/app/views/account.html
@@ -80,7 +80,7 @@
                       'text-danger': tx.analysis.impact.sign < 0 }">
         {{tx.analysis.impact.sign | sign}}{{tx.analysis.impact.value | amount}}
       </td>
-      <td class="txlist-ballance">
+      <td class="txlist-balance">
         {{tx.balance | amount}}
       </td>
     </tr>
