Cosmetic fixes in tx list

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -37,7 +37,7 @@
        ng-show="account.transactions != null && account.transactions.length">
   <thead>
     <tr class="text-muted">
-      <th width="13%" class="text-center">Block #</th>
+      <th width="16%" class="text-center">Block #</th>
       <th class="txlist-header-address">Address</th>
       <th width="16%" class="txlist-header-amount">Amount</th>
       <th width="16%">Balance</th>
@@ -51,7 +51,7 @@
           ng-if="tx.timestamp">
         {{tx.timestamp}}
       </td>
-      <td class="txlist-date text-muted"
+      <td class="txlist-date text-center text-muted"
           ng-if="!tx.timestamp">
         <small>Unconfirmed</small>
       </td>
