Disable keyboard navigation of recovery typeahead

--- a/app/views/recovery.html
+++ b/app/views/recovery.html
@@ -25,6 +25,7 @@
           ng-submit="recoverWord()">
       <div class="form-group">
         <input type="text" class="input-lg" placeholder="Enter seed word"
+               data-keyboard=""
                ng-options="word for word in seedWordlist"
                ng-model="seedWord"
                bs-typeahead>
