Add example help popover

--- a/app/views/setup.html
+++ b/app/views/setup.html
@@ -53,6 +53,15 @@
           <input type="checkbox" name="pin-protection"
                  ng-model="settings.pin_protection"> PIN protection
         </label>
+        <a href="" class="badge"
+              data-placement="top"
+              data-trigger="hover"
+              data-html="true"
+              data-title="Placeholder title"
+              data-content="
+                Placeholder <strong>content</strong>
+              "
+              bs-popover>?</a>
       </div>
 
       <div class="checkbox">
