--- a/app/views/modal.passphrase.html
+++ b/app/views/modal.passphrase.html
@@ -10,13 +10,26 @@
         <form class="form-inline"
               ng-submit="$hide(); callback(passphrase)">
           <div class="form-group">
-            <input type="password" class="form-control input-lg" size="12" autofocus autocomplete="off"
-                   ng-model="passphrase">
+            <input type="text" class="form-control input-lg" size="12"
+                   autofocus autocomplete="off"
+                   ng-model="passphrase"
+                   ng-show="showPassphrase">
+            <input type="password" class="form-control input-lg" size="12"
+                   autofocus autocomplete="off"
+                   ng-model="passphrase"
+                   ng-hide="showPassphrase">
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg">Enter</button>
           </div>
         </form>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="showPassphrase" ng-checked="false">
+            Show passphrase
+          </label>
+        </div>
       </div>
     </div>
   </div>
