use blockchain.info for txhash

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -91,7 +91,7 @@
       <td colspan="5">
         <dl>
           <dt>Tx hash:</dt>
-          <dd class="txlist-hash">{{tx.hash}}</dd>
+          <dd class="txlist-hash"><a href="https://blockchain.info/tx/{{tx.hash}}">{{tx.hash}}</a></dd>
         </dl>
       </td>
     </tr>
