fix last commit

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -90,8 +90,8 @@
         ng-repeat-end>
       <td colspan="5">
         <dl>
-          <dt>Tx hash:</dt>
-          <dd class="txlist-hash"><a href="https://blockchain.info/tx/{{tx.hash}}">{{tx.hash}}</a></dd>
+          <dt>Transaction details:</dt>
+          <dd class="txlist-hash"><a target="_blank" href="https://blockchain.info/tx/{{tx.hash}}">Blockchain</a></dd>
         </dl>
       </td>
     </tr>
