Experiment a little with send/recv navigation

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -251,13 +251,7 @@ body {
 /* Device send/receive nav */
 
 .nav-sendrecv {
-}
-
-.nav-sendrecv-active .btn {
-  opacity: 0.5;
-}
-
-.nav-sendrecv-active .btn.active {
+  margin-bottom: 30px;
 }
 
 /* Receive */
