--- a/app/views/account.html
+++ b/app/views/account.html
@@ -10,17 +10,24 @@
   </li>
 </ol>
 
-<p class="nav-sendrecv">
-  <a class="btn btn-lg"
-     href="#/device/{{device.id}}/account/{{account.id}}/send"
-     ng-disabled="account.isEmpty() || !device.isConnected()">
-    <span class="glyphicon glyphicon-cloud-upload"></span> Send
-  </a>
-  <a class="btn btn-lg"
-     href="#/device/{{device.id}}/account/{{account.id}}/receive">
-    <span class="glyphicon glyphicon-cloud-download"></span> Receive
-  </a>
-</p>
+<ul class="nav nav-tabs nav-sendrecv">
+  <li class="active">
+    <a href="#/device/{{device.id}}/account/{{account.id}}">
+      <span class="glyphicon glyphicon-list"></span> Transactions
+    </a>
+  </li>
+  <li>
+    <a href="#/device/{{device.id}}/account/{{account.id}}/receive">
+      <span class="glyphicon glyphicon-cloud-download"></span> Receive
+    </a>
+  </li>
+  <li>
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/send"
+       ng-disabled="account.isEmpty() || !device.isConnected()">
+      <span class="glyphicon glyphicon-cloud-upload"></span> Send
+    </a>
+  </li>
+</ul>
 
 <p class="text-center text-muted h1"
    ng-show="account.transactions == null">
