--- a/app/views/send.html
+++ b/app/views/send.html
@@ -12,6 +12,25 @@
   </li>
 </ol>
 
+<ul class="nav nav-tabs nav-sendrecv">
+  <li>
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}">
+      <span class="glyphicon glyphicon-list"></span> Transactions
+    </a>
+  </li>
+  <li>
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/receive">
+      <span class="glyphicon glyphicon-cloud-download"></span> Receive
+    </a>
+  </li>
+  <li class="active">
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/send"
+       ng-disabled="account.isEmpty() || !device.isConnected()">
+      <span class="glyphicon glyphicon-cloud-upload"></span> Send
+    </a>
+  </li>
+</ul>
+
 <div class="row">
   <form name="form" class="form-horizontal col-md-8">
 
