--- a/app/views/receive.html
+++ b/app/views/receive.html
@@ -55,7 +55,7 @@
          ng-repeat="address in usedAddresses"
          ng-class="{ active: activeAddress.address === address.address }"
          ng-click="activate(address)">
-        {{address.address}}
+        <span class="address-list-address">{{address.address}}</span>
         <small class="address-list-balance text-success pull-right"
           >({{address.balance | amount}} {{account.coin.coin_shortcut}})</small>
       </a>
@@ -77,7 +77,7 @@
          ng-class="{ active: activeAddress.address === address.address }"
          ng-click="activate(address)"
          ng-repeat-end>
-        {{address.address}}
+        <span class="address-list-address">{{address.address}}</span>
       </a>
     </div>
 
