passphrase protection -> passphrase encryption

--- a/app/views/load.html
+++ b/app/views/load.html
@@ -40,7 +40,7 @@
         <div class="checkbox">
           <label>
             <input type="checkbox" name="passphrase-protection"
-                   ng-model="settings.passphrase_protection"> Passphrase protection
+                   ng-model="settings.passphrase_protection"> Passphrase encryption
           </label>
         </div>
 
