--- a/app/views/recovery.html
+++ b/app/views/recovery.html
@@ -56,7 +56,7 @@
 
       <div class="form-group">
         <label for="word_count" class="control-label"
-          >How many words does your seed contain?</label>
+          >Number of words in your recovery seed</label>
         <input type="text" name="word_count" id="word_count"
                class="form-control"
                slider
@@ -81,14 +81,14 @@
       <div class="checkbox">
         <label>
           <input type="checkbox" name="pin-protection"
-                 ng-model="settings.pin_protection"> PIN protection
+                 ng-model="settings.pin_protection"> Enable PIN protection
         </label>
       </div>
 
       <div class="checkbox">
         <label>
           <input type="checkbox" name="passphrase-protection"
-                 ng-model="settings.passphrase_protection"> Passphrase encryption
+                 ng-model="settings.passphrase_protection"> Additional passphrase encryption
         </label>
       </div>
 
