--- a/app/views/setup.html
+++ b/app/views/setup.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="form-group">
-        <label for="strength" class="control-label">Recovery seed stregth</label>
+        <label for="strength" class="control-label">Recovery seed length</label>
         <input type="text" name="strength" id="strength"
                class="form-control"
                slider
@@ -51,7 +51,7 @@
       <div class="checkbox">
         <label>
           <input type="checkbox" name="pin-protection"
-                 ng-model="settings.pin_protection"> PIN protection
+                 ng-model="settings.pin_protection"> Enable PIN protection
         </label>
         <a href="" class="badge"
               data-placement="top"
@@ -67,7 +67,7 @@
       <div class="checkbox">
         <label>
           <input type="checkbox" name="passphrase-protection"
-                 ng-model="settings.passphrase_protection"> Passphrase encryption
+                 ng-model="settings.passphrase_protection"> Additional passphrase encryption
         </label>
       </div>
 
