--- a/app/views/wipe.html
+++ b/app/views/wipe.html
@@ -15,7 +15,8 @@
 </div>
 
 <fieldset ng-disabled="!device.isConnected()">
-  <p>You serious?</p>
+  <p>Do you really want to wipe the device?</p>
+  <p>All data from the device will be lost. But you can recover your funds using recovery seed.</p>
 
   <button class="btn btn-danger"
           ng-click="wipe(device)">Wipe</button>
