more changes to load view

--- a/app/views/load.html
+++ b/app/views/load.html
@@ -26,13 +26,13 @@
         </div>
 
         <div class="form-group">
-          <label for="payload" class="control-label">Seed or private key</label>
+          <label for="payload" class="control-label">Recovery seed or XPRV private key</label>
           <textarea name="payload" id="payload" class="form-control" required
                     ng-model="settings.payload"></textarea>
         </div>
 
         <div class="form-group">
-          <label for="pin" class="control-label">PIN (leave empty to disable PIN protection)</label>
+          <label for="pin" class="control-label">PIN</label> (leave empty to disable PIN protection)
           <input type="text" name="pin" id="pin" class="form-control"
                  ng-model="settings.pin">
         </div>
