Error on inconsistent account info, app reload button

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -192,6 +192,12 @@ body {
   margin-bottom: 10px;
 }
 
+/* Error on inconsistent acc info */
+
+.alert-inconsistent .btn {
+  margin-left: 20px;
+}
+
 /* Transaction list */
 
 .txlist thead th {
