change default values for sliders

--- a/app/views/setup.html
+++ b/app/views/setup.html
@@ -30,10 +30,11 @@
         <input type="text" name="strength" id="strength"
                class="form-control"
                slider
-               data-slider-value="192"
+               data-slider-value="128"
                data-slider-min="128"
                data-slider-max="256"
                data-slider-step="64"
+               data-slider-tooltip="hide"
                ng-model="settings.strength">
         <div class="row devsetup-strength">
           <div class="col-sm-4 text-left">
