--- a/app/views/recovery.html
+++ b/app/views/recovery.html
@@ -60,10 +60,11 @@
         <input type="text" name="word_count" id="word_count"
                class="form-control"
                slider
-               data-slider-value="18"
+               data-slider-value="12"
                data-slider-min="12"
                data-slider-max="24"
                data-slider-step="6"
+               data-slider-tooltip="hide"
                ng-model="settings.word_count">
         <div class="row devsetup-strength">
           <div class="col-sm-4 text-left">
