--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,5 @@
 <div ng-if="!devices.length" class="alert alert-info">
-	<h4>No devices found.</h4>
-	<p>Please connect your TREZOR device to the USB port.</p>
+	<h4>Get started</h4>
+	<p>Connect your TREZOR device to the computer.</p>
+        <p class='need-help'></p>
 </div>
