--- a/app/views/setup.html
+++ b/app/views/setup.html
@@ -87,6 +87,7 @@
             Encryption passphrase is additional level of security. You'll be asked for your passhrase every time
             you want to access your wallet. Careful, if you forget the passphrase,
             nothing will help you to get access to your wallet. Not even the Recovery seed.
+            Also note that passphrase is case-sensitive.
             <span style='color:red;'>For experts only!</span>
         </p>
         <label>
