Forget device text, fixed link in /load

--- a/app/views/load.html
+++ b/app/views/load.html
@@ -19,8 +19,8 @@
       <form name="form" class="devload col-md-6">
 
         <div class="alert alert-warning">
-        <p>This is an advanced interface intended for developer use only!.</p>
-        <p>If you are a common user and want to setup or recover your TREZOR device, please continue <a href="../setup">here</a>.</p>
+        <p>This is an advanced interface intended for developer use only!</p>
+        <p>If you are a common user and want to setup or recover your TREZOR device, please continue <a href="#/device/{{device.id}}/setup">here</a>.</p>
         <p>Never use this process unless you really know what you are doing!</p>
         </div>
 
