--- a/app/views/modal.button.html
+++ b/app/views/modal.button.html
@@ -17,7 +17,8 @@
           </ul>
         </div>
         <div ng-switch-when="ButtonRequest_ConfirmWord" class="alert alert-block alert-info">
-          <h4>Please write down the seed from your device.</h4>
+          <h4>Please write down the recovery seed from your device.</h4>
+          
         </div>
         <div ng-switch-when="ButtonRequest_WipeDevice" class="alert alert-block alert-warning">
           <h4>All data on your device will be deleted.</h4>
