Changed texts in forget device and firmware update, need some CSS love.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div ng-if="!devices.length" class="alert alert-info">
 	<h4>Get started</h4>
 	<p>Connect your TREZOR device to the computer.</p>
-        <p class='need-help'>#TODO</p>
+        <p class='need-help'><!-- #TODO --></p>
 </div>
