--- a/app/views/modal.firmware.html
+++ b/app/views/modal.firmware.html
@@ -5,11 +5,12 @@
     <div class="modal-content"
          ng-switch-when="initial">
       <div class="modal-body">
-        <h3>Your device firmware is out of date.</h3>
-        <p>Please plug your device in firmware update mode.</p>
-        <p>Keep both device buttons pressed while connecting the device to enter this mode.</p>
+        <h3>Your device firmware is outdated!</h3>
+        <p>Our team is constantly working on adding new features to TREZOR.</p>
+        <p>To enjoy full functionality and security of your device, we strongly recommend you
+        to update.<p>
 
-        <strong class="h5">Current firmware:</strong>
+       <strong class="h5">Current firmware:</strong>
         {{version[0]}}.{{version[1]}}.{{version[2]}}
         <br>
 
@@ -19,6 +20,11 @@
 
         <h5 ng-if="firmware.changelog">Changelog:</h5>
         <pre ng-if="firmware.changelog">{{firmware.changelog}}</pre>
+
+        <p>To update the firmware, please plug your device in firmware update mode.</p>
+        <p>Keep both device buttons pressed while connecting the device to enter this mode.</p>
+        <a href=''>Need help?<!-- #TODO --></a>
+
       </div>
       <div class="modal-footer"
            ng-if="!firmware.required">
@@ -47,6 +53,11 @@
           <pre>{{firmware.changelog}}</pre>
         </div>
 
+        <strong>Caution:</strong>
+        <span style='color:red;'>Always have your Recovery seed with you before updating the firmware!</span>
+        <p>In very rare cases, a firmware update might result in the need to recover the wallet
+        from Recovery seed.</p>
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary"
@@ -61,8 +72,8 @@
          ng-switch-when="device-normal">
       <div class="modal-body">
         <div class="alert alert-warning text-center">
-          <h4>Plugged device is not in firmware update mode.</h4>
-          <p>Keep both device buttons pressed while connecting the device to enter this mode.</p>
+          <h4>Your TREZOR is not in the firmware update mode.</h4>
+          <p>Please reconnect it <strong>shile pressing both buttons simultaneously.</strong></p>
         </div>
       </div>
       <div class="modal-footer"
@@ -76,7 +87,7 @@
          ng-switch-when="update-downloading">
       <div class="modal-body">
         <div class="alert alert-info text-center">
-          <h4>Downloading firmware</h4>
+          <h4>Downloading firmware...</h4>
         </div>
       </div>
     </div>
@@ -85,8 +96,9 @@
          ng-switch-when="update-flashing">
       <div class="modal-body">
         <div class="alert alert-info text-center">
-          <h4>Uploading firmware</h4>
+          <h4>Uploading firmware...</h4>
           <p>If asked, please confirm the update on your device.</p>
+          <!-- #TODO pridat obrazek akce na trezoru -->
         </div>
       </div>
     </div>
@@ -96,7 +108,7 @@
       <div class="modal-body">
         <div class="alert alert-success text-center">
           <h4>Update was successful</h4>
-          <p>Please unplug the device.</p>
+          <p>Please unplug the device now.</p>
         </div>
       </div>
     </div>
