--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,6 +47,25 @@
   margin-top: 10px;
 }
 
+.alert-withicon {
+  position: relative;
+  padding-left: 100px;
+}
+
+.alert-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  padding: 0 10px;
+  margin-top: -26px;
+  font-size: 52px;
+  opacity: 0.3;
+}
+
+.modal-footer {
+  margin-top: 0;
+}
+
 .modal-body > .alert:last-child {
   margin-bottom: 0;
 }
@@ -350,8 +369,7 @@ body {
 }
 
 .devsetup-wipe {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px;
 }
 
 .devsetup-strength {
