--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -20,7 +20,7 @@
     <ul class="nav nav-devices-accounts">
       <!-- Account -->
       <li ng-repeat="account in device.accounts">
-        <a ng-href="#/device/{{device.id}}/account/{{account.id}}"
+        <a ng-href="#/device/{{device.id}}/account/{{account.id}}{{account.isEmpty()?'/receive':''}}"
            ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}') }"
           >{{account.label()}}
           <small class="dev-acc-info">
