fix forget device button

--- a/app/views/send.html
+++ b/app/views/send.html
@@ -8,7 +8,7 @@
     <a href="" class="text-muted"
        title="Forget this device"
        ng-click="forgetDevice()"
-      ><span class="glyphicon glyphicon-log-out"> Forget device</span></a>
+      ><span class="glyphicon glyphicon-log-out"></span> Forget device</a>
   </li>
 </ol>
 
