--- a/app/views/device.html
+++ b/app/views/device.html
@@ -17,8 +17,8 @@
   <div class="col-md-12" ng-hide="device.isEmpty()">
     <a class="btn btn-default"
        ng-href="#/device/{{device.id}}/wipe"
-      ><span class="text-danger">Wipe device</span>
-      <small class="text-muted">- delete all private data and reset device to factory defaults</small></a>
+      ><span class="text-danger">Wipe device</span></a>
+    <small class="text-muted">- delete all private data and reset device to factory defaults</small>
   </div>
 
   <div class="devsetup col-md-8" ng-show="device.isEmpty()">
